--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ body {
 .landing{
   background-image: url(../images/landing.jpg);
   background-size: cover;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   background-position: center;
   height:calc(100vh - 60px);
   position: relative;
